# spbu

./: .gitignore  README.md  app.py  input.toml  input_table.toml  input_western.toml  main.py  pyproject.toml
core/: __init__.py  calculator.py  helpers.py  models.py
core/russian/: __init__.py  bearing.py  penetration.py  settlement.py  tables.py
core/western/: __init__.py  bearing.py  penetration.py  tables.py
plot/: __init__.py  annotations.py  base.py  curves.py  styles.py  zones.py
tests/: conftest.py  test_russian_stress_distribution.py  test_western_cu_variability.py  test_western_equilibrium_depth.py  test_western_iso_table_23_1.py  test_western_profile_cache.py  test_western_shape_factors.py
ui/: state.py  utils.py
ui/components/: coefficients_form.py  foundation_form.py  loads_form.py  results_view.py  soil_editor.py
