[project]
name = "spbu-foundation"
version = "0.1.0"
description = "Расчёт основания СПБУ по СП 22.13330 / СП 23.13330"
requires-python = ">=3.14"
dependencies = [
    "kaleido>=1.2.0",
    "numpy>=2.0",
    "pandas>=2.3.3",
    "plotly>=5.24",
    "pydantic>=2.0",
    "pytest>=9.0.2",
    "streamlit>=1.52.0",
    "tomli_w>=1.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
